@@ -6,27 +6,38 @@
   The internal data table structures in rqda file, which is a SQLite data base.
 }
 \details{
+  Table "annotation" contatins file annotations.
+   \tabular{ll}{
+   fid:\tab file id. \cr 
+   position:\tab position of annotation.\cr
+   annotation:\tab content of annotation.\cr
+   owner:\tab owner of annotation.\cr
+   date:\tab created date.\cr
+   dateM:\tab not used currently.\cr
+   status:\tab 1 for standard status and 0 for temporarily deleted annotation.\cr
+   }
+
   Table "attributes" contatins information about the name list of
   attributes. They are held in the widget of ".AttrNamesWidget".
   \tabular{ll}{
     name:\tab name of attributes. \cr 
-    status:\tab 1 for standard status and 0 for temporarily deleted attributes.\cr 
+    status:\tab 1 for standard status and 0 for a temporarily deleted attribute.\cr 
     date:\tab created date of as attribute.\cr 
-    dateM:\tab . \cr 
+    dateM:\tab not used currently.\cr 
     owner:\tab owner of an attribute. \cr 
-    memo:\tab memo of an attribute.\cr
+    memo:\tab memo of an attribute. Useful for definition of attributes.\cr
     class:\tab class of an attribute. It might be "character" or "numeric".\cr
   }
   
   Table "caseAttr" contatins information about attributes of cases.
   \tabular{ll}{
     variable:\tab name of case attributes, coresponding to name in
-    attributes table. \cr
-    value:\tab . \cr 
-    caseID:\tab . \cr 
-    date:\tab . \cr 
-    dateM:\tab . \cr 
-    owner:\tab . \cr 
+    attributes table.\cr
+    value:\tab variable value.\cr 
+    caseID:\tab corresponding case id of a variable value.\cr 
+    date:\tab created date of a case attribute record.\cr 
+    dateM:\tab not used currently.\cr 
+    owner:\tab creater of the case attribute record.\cr 
   }
   
   Table "caselinkage" contatins information about the relationship
@@ -36,7 +47,7 @@
     fid:\tab . \cr 
     selfirst:\tab . \cr 
     selend:\tab . \cr 
-    status:\tab 1 for standard status and 0 for temporarily deleted file. \cr 
+    status:\tab 1 for standard status and 0 for temporarily deleted record. \cr 
     owner:\tab . \cr 
     date:\tab . \cr 
     memo:\tab . \cr 
@@ -50,7 +61,7 @@
     date:\tab . \cr 
     dateM:\tab . \cr 
     id:\tab . \cr 
-    status:\tab 1 for standard status and 0 for temporarily deleted file. \cr }
+    status:\tab 1 for standard status and 0 for temporarily deleted record. \cr }
   
   Table "codecat" contatins information about upper-level of code list.
   \tabular{ll}{
@@ -61,7 +72,7 @@
     date:\tab . \cr 
     dateM:\tab . \cr 
     memo:\tab . \cr 
-    status:\tab 1 for standard status and 0 for temporarily deleted file. \cr 
+    status:\tab 1 for standard status and 0 for temporarily deleted record. \cr 
   }
   
   Table "coding" contains information on codings.
@@ -96,7 +107,7 @@
     date:\tab \cr
     dateM:\tab \cr
     memo:\tab \cr
-    status:\tab 1 for standard status and 0 for temporarily deleted file. \cr
+    status:\tab 1 for standard status and 0 for temporarily deleted record. \cr
   }
 
   Table "freecode" contains information on the codes list.
@@ -107,9 +118,13 @@
     date :\tab \cr 
     dateM :\tab \cr 
     id :\tab \cr 
-    status :\tab 1 for standard status and 0 for temporarily deleted file.\cr
+    status :\tab 1 for standard status and 0 for temporarily deleted record.\cr
     color:\tab color for code marker (added in version 0.19)\cr
   }
+
+  Table "image" contatins information about images. It is not used currently.
+
+  Table "imageCoding" contatins images coding. It is not used currently.
   
   Table "journal" contatins information about field work
   journal. Journal titles are held in widget of ".JournalNamesWidget".
@@ -119,17 +134,19 @@
     date:\tab created date of a journal\cr 
     dateM:\tab not used currently \cr 
     owner:\tab owner of a journal\cr 
-    status:\tab 1 for standard status and 0 for temporarily deleted file. \cr 
+    status:\tab 1 for standard status and 0 for temporarily deleted journal. \cr 
   }
   
   Table "project" contatins information about the project and *.rqda file.
   \tabular{ll}{
-    encoding:\tab . \cr 
-    databaseversion:\tab . \cr 
-    date:\tab . \cr 
-    dateM:\tab . \cr 
-    memo:\tab . \cr 
-    BOM:\tab . \cr 
+    encoding:\tab not used currently.\cr 
+    databaseversion:\tab version of RQDAtables. \cr 
+    date:\tab created date of the project. \cr 
+    dateM:\tab not used currently.\cr 
+    memo:\tab project memo.\cr 
+    BOM:\tab not used curently.\cr 
+    imageDir:\tab directory of image. Not used currently.\cr
+    about:\tab meta information about the rqda file.\cr
   }
   
   Table "source" contains the content of files. Files are held in widget
