@@ -7,16 +7,48 @@
 	<META NAME="CREATED" CONTENT="20081101;12455800">
         <!link rel="stylesheet" href="rqda.css">
         <style type="text/css">
-body {
-  padding-left: 3em;
-  padding-right: 3em;
-  font-family: "Times New Roman",Times, serif;
-  color: darkblue;
-  font-size:13px}
-h1 {
-  font-family: Helvetica, Arial,SunSans-Regular, sans-serif;
-  font-size:14px
-  }
+
+BODY{		background: white;
+		color: black }
+
+A:link{         background: white;
+                color: blue }
+A:visited{	background: white;
+		color: rgb(50%, 0%, 50%) }
+
+H1{		background: white;
+		color: rgb(55%, 55%, 55%);
+		font-family: monospace;
+		font-size: x-large;
+		text-align: center }
+
+H2{		background: white;
+		color: rgb(40%, 40%, 40%);
+		font-family: monospace;
+		font-size: large;
+		text-align: center }
+
+H3{		background: white;
+		color: rgb(40%, 40%, 40%);
+		font-family: monospace;
+		font-size: large }
+
+IMG.toplogo{	vertical-align: middle }
+
+IMG.arrow{	width: 30px;
+		height: 30px;
+		border: 0 }
+
+span.acronym{font-size: small}
+span.env{font-family: monospace}
+span.file{font-family: monospace}
+span.option{font-family: monospace}
+span.pkg{font-weight: bold}
+span.samp{font-family: monospace}
+
+div.vignettes a:hover {
+  background: rgb(85%, 85%, 85%);
+}
           </style>
 
 </HEAD>
@@ -40,7 +72,7 @@ h1 {
 <li>Facilitator helps to categorize codes,which is key to theory building. I deliberately avoid using tree-like categorization
 <li>Facilitator helps to categorize files
 <li>Search files by keywords and can highlight keyword in the open file.
-<li> Atrributes of file, which is useful for content analysis
+<li>Atrributes of file, which is useful for content analysis
 <li>There is a case category and related attributes of cases, which is crucial feature to bridge qualitative and quantitative research.
 <li>Search information about selected case from the Internet via popup menu
 <li>Temporary delete files and codes
@@ -73,7 +105,8 @@ h1 {
   of RQDA, you can use this command after you have installed RQDA by
   the last command: <I>install.packages("RQDA",repos=" http://R-Forge.R-project.org")</I>.
 
-<li><B>Step five</B>, Launch RQDA by command <I>library(RQDA)</I> from within R. Then you can see the RQDA GUI.
+<li><B>Step five</B>, Launch RQDA by command <I>library(RQDA)</I> from within R. Then you can see the 
+<A HREF="screenshots/Main_Debian_linux.png" target="_blank">RQDA GUI</A>.
 
 <h1>Documentation</h1>
 <A HREF="documentation.html#manual" target="_blank">User Manual</A>
