@@ -1,3 +1,6 @@
+2010-02-25
+	* rename some buttons: retrieval -> coding; add anno -> anno; mark and unmark in case tab -> link and unlink
+
 2010-02-23
 	* Various bugfixes: journal name with ' can be handled correctly.
 	* add icon to annotation widget.
